Fixes z-index on media links

--- a/style/less/site.less
+++ b/style/less/site.less
@@ -58,6 +58,7 @@ a {
 
 .media {
 	position: fixed;
+	z-index: 100;
 	left: 0;
 	top: 50%;
 	width: 100px;
